src/styles/mdx-content.css
.mdx-content {
    & a {
        @apply relative font-medium;

        &.anchor {
            @apply absolute;
        }

        &:not([href^='http']):not([href^='https']) {
            @apply border-b-[0.1em] font-medium;
        }

        &[href^='http']::before,
        &[href^='https']::before {
            @apply absolute bottom-0 left-0 right-[0.8em] border-b-[0.1em] content-[''];
        }

        &[href^='http']::after,
        &[href^='https']::after {
            @apply ml-[0.2rem] inline-block -translate-y-[0.2rem] align-top font-heading text-[18px] transition-transform content-['↗︎'] hover:-translate-y-[0.4rem] hover:translate-x-[0.2rem];
        }
    }

    & strong {
        @apply font-medium text-accent selection:bg-accent dark:text-accent-dark dark:selection:bg-accent-dark;
    }

    & em {
        @apply font-medium not-italic text-accent selection:bg-accent dark:text-accent-dark dark:selection:bg-accent-dark;
    }

    & h1,
    & h2,
    & h3,
    & h4 {
        @apply relative -mx-8 text-balance px-8 font-heading oldstyle-nums proportional-nums stacked-fractions tracking-tight;

        & .anchor {
            @apply opacity-0;
        }

        &:hover .anchor {
            @apply opacity-100;
        }
    }

    & h1 {
        @apply pb-4 pt-14 text-4xl lg:pb-6 lg:pt-20 lg:text-5xl;
    }

    & h2 {
        @apply mb-3 mt-10 border-t-4 border-ui-border-hr pt-8 text-3xl first-of-type:mt-0 first-of-type:border-none lg:mb-6 lg:mt-14 lg:pt-12 lg:text-4xl dark:border-ui-border-hr-dark;
    }

    & h3 {
        @apply pb-4 pt-3 text-2xl lg:pb-6 lg:pt-4 lg:text-3xl;
    }

    & h4 {
        @apply pb-4 pt-3 text-xl lg:pb-6 lg:pt-4 lg:text-2xl;
    }

    & p,
    & ul,
    & ol,
    & pre,
    & kbd,
    & samp,
    & code,
    & table,
    & img {
        @apply mb-4 leading-[1.35rem] lg:mb-6 lg:text-base lg:leading-[1.68rem];
    }

    & ul li {
        @apply relative before:absolute before:left-[-1.4em] before:content-['→'];
    }

    & ol li {
        @apply relative before:absolute before:left-[-1.4em];

        &::before {
            content: counter(list-item) '.';
        }
    }

    & p code,
    & table code {
        @apply rounded-md border border-code-stroke bg-code-bg px-[0.4em] py-[0.1em] font-source text-[0.91em] dark:border-code-stroke-dark dark:bg-code-bg-dark;
    }

    & pre {
        @apply relative overflow-x-auto rounded-md border border-code-stroke bg-code-bg p-4 dark:border-code-stroke-dark dark:bg-code-bg-dark;

        & .copy-button {
            @apply icon-[solar--clipboard-linear] absolute right-2 top-2 block h-5 w-5 cursor-pointer opacity-40;

            &.has-passed {
                @apply icon-[solar--check-square-bold] h-5 w-5;
            }

            &.has-failed {
                @apply icon-[solar--forbidden-circle-bold] h-5 w-5;
            }
        }

        * {
            @apply font-source text-[0.97em];
        }

        &:hover,
        &:active,
        &:focus {
            @apply border-code-stroke-hover dark:border-code-stroke-hover-dark;

            & .copy-button {
                @apply hover:opacity-100;
            }
        }
    }

    & img {
        @apply rounded-md border border-code-stroke bg-code-bg dark:border-code-stroke-dark dark:bg-code-bg-dark;
    }

    & table {
        @apply block w-full overflow-x-auto whitespace-nowrap lg:whitespace-normal;

        & thead th:first-child,
        & thead th:nth-child(3) {
            @apply w-1/3;
        }

        & tr {
            @apply border-b border-ui-border-hr last:border-b-0 dark:border-ui-border-hr-dark;
        }

        & td {
            @apply px-2 py-3 align-top first:pl-0 last:pr-0;
        }

        & th {
            @apply border-b border-text px-2 pb-2 text-left font-normal first:pl-0 last:pr-0 dark:border-text-dark;
        }
    }

    & blockquote {
        @apply text-pretty border-l-4 border-ui-border-hr pl-4 dark:border-ui-border-hr-dark;
    }
}

@media (prefers-color-scheme: dark) {
    .astro-code,
    .astro-code span {
        background-color: var(--shiki-dark-bg) !important;
        color: var(--shiki-dark) !important;
        font-style: var(--shiki-dark-font-style) !important;
        font-weight: var(--shiki-dark-font-weight) !important;
        text-decoration: var(--shiki-dark-text-decoration) !important;
    }
}

